--- a/index.html
+++ b/index.html
@@ -3,11 +3,18 @@
 
 <head>
   <meta charset="UTF-8">
-  <title>Calculator</title>
-  <link rel="stylesheet" href="css/style.css">
+  <title>Calculator with SCSS. OOP JS</title>
+  
+  
+  
+      <link rel="stylesheet" href="css/style.css">
+
+  
 </head>
+
 <body>
- <div id="calculator">
+
+  <div id="calculator">
   <!-- Screen and clear key -->
   <div class="top">
     <button id="clear" onclick="presenter.clearScreen()">C</button>
@@ -33,6 +40,14 @@
     <button class="operator" onclick="presenter.addOperator(event)">x</button>
   </div>
 </div>
-<script  src="js/index.js"></script>
+  
+  
+
+    <script  src="js/index.js"></script>
+
+
+
+
 </body>
+
 </html>
